--- a/resume.html
+++ b/resume.html
@@ -87,7 +87,7 @@
       <div class="row d-flex justify-content-center text-center">
         <div class="col-lg-8">
           <h1>Resume</h1>
-          <p class="mb-0">I'm Leydi Chipana, an economics student with experience in data analysis and data science.</p>
+          <p class="mb-0">I am Leydi, an aspiring economist and data analyst passionate about working with organizations and projects that want to maximize the potential of their data. From designing robust data strategies and processing large datasets to conducting in-depth analysis and delivering actionable insights, I strive to bridge the gap between data and decision-making to address complex economic challenges.</p>
         </div>
       </div>
     </div>
@@ -121,14 +121,14 @@
         <h3 class="resume-title">Education</h3>
         <div class="resume-item">
           <h4>Bachelor in Economics</h4>
-          <h5>2020 - 2025</h5>
+          <h5>Apr 2020 - Dec 2025</h5>
           <p><em>Pontificia Universidad Católica del Perú, Lima, Peru</em></p>
           <p>Bachelor of Arts in Social Sciences with a major in Economics, Bachelor of Arts in Economics.</p>
         </div><!-- End Resume Item -->
 
         <div class="resume-item">
           <h4>QLAB Summer School</h4>
-          <h5>2025</h5>
+          <h5>Jan 2025 - Feb 2025</h5>
           <p><em>Artificial Intelligence and Computational Methods in Social Sciences (Q-LAB) </em></p>
           <p>Program of specialized courses in the Macroeconomics and Finance block. </p>
         </div><!-- Edn Resume Item -->
@@ -139,7 +139,7 @@
 
   <div class="resume-item">
     <h4>Subdirector of Marketing</h4>
-    <h5>2024 - 2025</h5>
+    <h5> Aug 2024 - Jan 2025</h5>
     <p><em>Revista Económica, PUCP</em></p>
     <ul>
       <li>Led a multidisciplinary team to develop automated Power BI reports, reducing reporting time by 40%.</li>
@@ -168,29 +168,22 @@
 
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">Personal</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3 class="sitename">My mission</h3>
+      <p>My mission is to make a meaningful impact in economic analysis by leveraging data science and advanced data analytics. I aim to support evidence-based decision-making and empower organizations to uncover insights that drive economic growth and financial inclusion.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/leydi-conzuelo-chipana-cangana-1b8202326/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/MandarineLab" target="_blank"><i class="bi bi-github"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Personal</strong> <span>All Rights Reserved</span>
+          <span>&copy; 2025</span> <strong class="px-1 sitename">Perfil</strong> <span>Todos los derechos reservados</span>
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you've purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Diseñado por <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
     </div>
-  </footer>
+</footer>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
