--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
   <footer id="footer" class="footer dark-background">
     <div class="container">
       <h3 class="sitename">Contact</h3>
-      <p>I am available for short-term projects and part-time longer-term engagements..</p>
+      <!-- Email and availability -->
+      <p>
+      I am available for short-term projects and part-time longer-term engagements. 
+      Feel free to contact me at <a href="mailto:chipana.l@pucp.edu.pe" style="text-decoration: underline; color: #007bff;">chipana.l@pucp.edu.pe</a>.
+      </p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.linkedin.com/in/leydi-conzuelo-chipana-cangana-1b8202326/" target="_blank"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/MandarineLab" target="_blank"><i class="bi bi-github"></i></a>
