--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-2.png" alt="" data-aos="fade-in">
+      <img src="assets/img/hero-2 (1).png" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Leydi Chipana</h2>
